# openapi-sdk-python

./: LICENSE  README.md  README_zh.md  pyproject.toml
example/: im_message_echo.py
src/cored/: __init__.py  client.py
src/cored/core/: api_client.py  config.py  consts.py  crypto.py  http_client.py  logger.py  time_manager.py  types.py  version.py  ws_client.py
src/cored/internal/: __init__.py  transport.py
src/cored/service/im/: __init__.py
src/cored/service/im/v1/: __init__.py  chat.py  chat_model.py  message.py  message_enum.py  message_event.py  message_model.py  v1.py
